Updated Zoe & Goliath presets to fix layout issues.

--- a/src/core/css/hover-effects/preset.css
+++ b/src/core/css/hover-effects/preset.css
@@ -37,5 +37,5 @@
 	overflow: hidden;
 }
 .foogallery.fg-preset .fg-caption-title+.fg-caption-desc {
-	margin: 0;
+	padding: 0;
 }
